--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Monopoly</title>
-    <h1>Monopoly</h1>
-    <form method="post">
-        <input type="text" name="amount_players" placeholder="Number of players" value="{{amount_players}}" />
-        <input type="Submit" value="OK" />
-    </form>
 </head>
 <body>
-
+    <h1>Monopoly</h1>
+    <form method="post">
+        <input type="text" name="amount_players" placeholder="Number of players" value="{{amount_players}}">
+        <input type="Submit" value="OK">
+    </form>
 </body>
 </html>
